Styling improvements and static pages

--- a/src/RecruitMe.Web/ClientApp/components/account/emailverified/emailverified.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/account/emailverified/emailverified.vue.html
@@ -1,5 +1,5 @@
 ﻿<template>
-    <card-layout className="col-sm-6">
+    <card-layout>
         <v-card-text >
             <h2>Email zostal potwierdzony</h2>
             Teraz mozesz sie zalogowac za pomoca loginu: {{$route.query.candidateId}}
