--- a/src/RecruitMe.Web/ClientApp/components/account/register/register.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/account/register/register.vue.html
@@ -4,44 +4,41 @@
         <card-layout v-if="!registrationCompleted" className="col-md-10">
             <v-card-text>
                 <h2>Rejestracja</h2>
-                <form @submit.prevent="()=>{}">
-                    <v-text-field label="Imię" v-model="name" name="name" :rules="notEmptyRule"></v-text-field>
-                    <v-text-field label="Nazwisko" v-model="surname" name="surname" :rules="notEmptyRule"></v-text-field>
+                <v-text-field label="Imię" v-model="name" name="name" :rules="notEmptyRule"></v-text-field>
+                <v-text-field label="Nazwisko" v-model="surname" name="surname" :rules="notEmptyRule"></v-text-field>
 
-                    <v-checkbox v-model="noPesel" label="Nie mam numeru PESEL"></v-checkbox>
-                    <v-text-field v-if="!noPesel" label="Nr PESEL" v-model="pesel" name="pesel" :rules="peselHas11digit"></v-text-field>
+                <v-checkbox v-model="noPesel" label="Nie mam numeru PESEL"></v-checkbox>
+                <v-text-field v-if="!noPesel" label="Nr PESEL" v-model="pesel" name="pesel" :rules="peselHas11digit"></v-text-field>
 
-                    <v-menu ref="menu"
-                            v-model="menu"
-                            :close-on-content-click="false"
-                            :return-value.sync="birthDate"
-                            transition="scale-transition"
-                            offset-y
-                            min-width="290px">
-                        <template v-slot:activator="{ on }">
-                            <v-text-field v-model="birthDate"
-                                          label="Data urodzenia"
-                                          prepend-icon="event"
-                                          readonly
-                                          v-on="on"></v-text-field>
-                        </template>
-                        <v-date-picker 
-                            locale="pl"
-                            v-model="birthDate" no-title scrollable>
-                            <v-spacer></v-spacer>
-                            <v-btn text color="primary" @click="menu = false">Anuluj</v-btn>
-                            <v-btn text color="primary" @click="$refs.menu.save(birthDate)">OK</v-btn>
-                        </v-date-picker>
-                    </v-menu>
+                <v-menu ref="menu"
+                        v-model="menu"
+                        :close-on-content-click="false"
+                        :return-value.sync="birthDate"
+                        transition="scale-transition"
+                        offset-y
+                        min-width="290px">
+                    <template v-slot:activator="{ on }">
+                        <v-text-field v-model="birthDate"
+                                      label="Data urodzenia"
+                                      prepend-icon="event"
+                                      readonly
+                                      v-on="on"></v-text-field>
+                    </template>
+                    <v-date-picker locale="pl"
+                                   v-model="birthDate" no-title scrollable>
+                        <v-spacer></v-spacer>
+                        <v-btn text color="primary" @click="menu = false">Anuluj</v-btn>
+                        <v-btn text color="primary" @click="$refs.menu.save(birthDate)">OK</v-btn>
+                    </v-date-picker>
+                </v-menu>
 
 
-                    <v-text-field label="Adres email" v-model="email" name="email" :rules="notEmptyRule"></v-text-field>
+                <v-text-field label="Adres email" v-model="email" name="email" :rules="notEmptyRule"></v-text-field>
 
-                    <v-text-field label="Hasło" v-model="password" name="password" type="password" :rules="notEmptyRule"></v-text-field>
-                    <v-text-field label="Powtórz hasło" v-model="confirmPassword" name="confirmPassword" type="password" :rules="notEmptyRule"></v-text-field>
+                <v-text-field label="Hasło" v-model="password" name="password" type="password" :rules="notEmptyRule"></v-text-field>
+                <v-text-field label="Powtórz hasło" v-model="confirmPassword" name="confirmPassword" type="password" :rules="notEmptyRule"></v-text-field>
 
-                    <v-alert type="error" v-show="backendError" v-html="backendError"></v-alert>
-                </form>
+                <v-alert type="error" v-show="backendError" v-html="backendError"></v-alert>
             </v-card-text>
             <v-card-actions>
                 <div class="form-group">
