Add web interface for payment making

--- a/src/RecruitMe.Web/ClientApp/components/payments/makePayment/makePayment.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/payments/makePayment/makePayment.vue.html
@@ -1,9 +1,107 @@
 <template>
-    <v-row>
-        <div>
-            <v-btn @click="makePayment">Click me</v-btn>
-        </div>
-    </v-row>
+    <card-layout className="col-sm-6">
+        <v-row v-if="!firstTimeFetch">
+            <v-col cols='5'>
+                <svg v-if="isPaymentMade" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 130.2 130.2">
+                    <circle class="path circle" fill="none" stroke="#73AF55" stroke-width="6" stroke-miterlimit="10" cx="65.1" cy="65.1" r="62.1"/>
+                    <polyline class="path check" fill="none" stroke="#73AF55" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" points="100.2,40.2 51.5,88.8 29.8,67.5 "/>
+                </svg>
+                <svg v-else version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 130.2 130.2">
+                    <circle class="path circle" fill="none" stroke="#D06079" stroke-width="6" stroke-miterlimit="10" cx="65.1" cy="65.1" r="62.1"/>
+                    <line class="path line" fill="none" stroke="#D06079" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="34.4" y1="37.9" x2="95.8" y2="92.3"/>
+                    <line class="path line" fill="none" stroke="#D06079" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" x1="95.8" y1="38" x2="34.4" y2="92.2"/>
+                </svg>
+            </v-col>
+            <v-divider vertical></v-divider>
+            <v-col>
+                <div v-if="isPaymentMade">
+                    <h3>Twoja płatność została zaksięgowana w naszym systemie.</h3>
+                    <h4>Jesteś przypisany/przypisana na wszystkie dostępne egzaminy.</h4>
+                </div>
+                <div v-else>
+                    <h3>Twoja płatność nie została zaksięgowana w naszym systemie.</h3>
+                    <h4>Uniemożliwia Ci to zapisanie oraz przystąpienie do egzaminów.</h4>
+
+                    <p>Jeżeli jeszcze nie uiściłeś płatności, zrób to już teraz, klikając w przycisk poniżej.</p>
+                    <p>W razie wątpliwości, prosimy o kontakt poprzez chat lub przez adres mailowy.</p>
+                </div>
+            </v-col>
+        </v-row>
+
+        <v-card-actions v-if="!firstTimeFetch">
+            <v-spacer></v-spacer>
+            <v-btn @click="makePayment">
+                <span>Przejdź do płatności   <v-icon>open_in_new</v-icon></span>
+            </v-btn>
+        </v-card-actions>
+    </card-layout>
 </template>
 
 <script src="./makePayment.ts"></script>
+
+<style lang="scss" scoped>
+p, h3, h4 {
+    margin-bottom: 2px;
+}
+
+svg {
+  width: 100px;
+  display: block;
+  margin: 40px auto 0;
+}
+
+.path {
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 0;
+  &.circle {
+    -webkit-animation: dash .9s ease-in-out;
+    animation: dash .9s ease-in-out;
+  }
+  &.line {
+    stroke-dashoffset: 1000;
+    -webkit-animation: dash .9s .35s ease-in-out forwards;
+    animation: dash .9s .35s ease-in-out forwards;
+  }
+  &.check {
+    stroke-dashoffset: -100;
+    -webkit-animation: dash-check .9s .35s ease-in-out forwards;
+    animation: dash-check .9s .35s ease-in-out forwards;
+  }
+}
+
+@-webkit-keyframes dash {
+  0% {
+    stroke-dashoffset: 1000;
+  }
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+
+@keyframes dash {
+  0% {
+    stroke-dashoffset: 1000;
+  }
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+
+@-webkit-keyframes dash-check {
+  0% {
+    stroke-dashoffset: -100;
+  }
+  100% {
+    stroke-dashoffset: 900;
+  }
+}
+
+@keyframes dash-check {
+  0% {
+    stroke-dashoffset: -100;
+  }
+  100% {
+    stroke-dashoffset: 900;
+  }
+}
+</style>
