Added exam listing page for  candidates

--- a/src/RecruitMe.Web/ClientApp/components/recruitment/profile/profile.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/recruitment/profile/profile.vue.html
@@ -1,7 +1,7 @@
 ﻿<template>
-    <div class="profile">
+    <v-container>
         <h2>Profil</h2>
-        <div class="row">
+        <div>
             <div class="profile-data col-sm-6">
                 <v-card class="mb-3">
                     <v-card-subtitle>
@@ -76,9 +76,7 @@
                     </v-card-text>
                 </v-card>
             </div>
-
         </div>
-
-    </div>
+    </v-container>
 </template>
 <script src="./profile.ts"></script>
