--- a/src/RecruitMe.Web/ClientApp/components/account/resetPassword/resetPassword.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/account/resetPassword/resetPassword.vue.html
@@ -3,15 +3,12 @@
         <card-layout v-if="!passwordResetCompleted">
             <v-card-text>
                 <h2>Resetuj hasło</h2>
-                <form @submit.prevent="()=>{}">
-                    <v-text-field label="Login" v-model="login" name="login" :rules="notEmptyRule"></v-text-field>
-                    <v-card-actions>
-                        <div class="form-group">
-                            <v-btn :disabled="fetching" @click="handleSubmit">Resetuj hasło</v-btn>
-                            <img v-show="fetching" />
-                        </div>
-                    </v-card-actions>
-                </form>
+                <v-text-field label="Login" v-model="login" name="login" :rules="notEmptyRule"></v-text-field>
+                <v-card-actions>
+                    <div class="form-group">
+                        <v-btn :disabled="fetching" @click="handleSubmit">Resetuj hasło</v-btn>
+                    </div>
+                </v-card-actions>
             </v-card-text>
         </card-layout>
 
@@ -25,6 +22,13 @@
                 </v-btn>
             </v-card-actions>
         </card-layout>
+
+        <v-snackbar v-model="snackbar">
+            {{ errorMessage }}
+            <v-btn color="pink" text @click="snackbar = false">
+                Zamknij
+            </v-btn>
+        </v-snackbar>
     </v-container>
 </template>
 
