--- a/src/RecruitMe.Web/ClientApp/components/account/setNewPassword/setNewPassword.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/account/setNewPassword/setNewPassword.vue.html
@@ -3,16 +3,13 @@
         <card-layout v-if="!newPasswordSet">
             <v-card-text>
                 <h2>Ustaw nowe haslo</h2>
-                <form @submit.prevent="()=>{}">
-                    <v-text-field label="Nowe hasło" v-model="newPassword" name="newPassword" type="password" :rules="notEmptyRule"></v-text-field>
-                    <v-text-field label="Potwierdź hasło" v-model="confirmPassword" name="confirmPassword" type="password" :rules="notEmptyRule"></v-text-field>
-                </form>
+                <v-text-field label="Nowe hasło" v-model="newPassword" name="newPassword" type="password" :rules="notEmptyRule"></v-text-field>
+                <v-text-field label="Potwierdź hasło" v-model="confirmPassword" name="confirmPassword" type="password" :rules="notEmptyRule"></v-text-field>
             </v-card-text>
 
             <v-card-actions>
                 <div class="form-group">
                     <v-btn :disabled="fetching" @click="handleSubmit">Ustaw nowe hasło</v-btn>
-                    <img v-show="fetching" />
                 </div>
             </v-card-actions>
 
@@ -28,6 +25,13 @@
                 </v-btn>
             </v-card-actions>
         </card-layout>
+
+        <v-snackbar v-model="snackbar">
+            {{ errorMessage }}
+            <v-btn color="pink" text @click="snackbar = false">
+                Zamknij
+            </v-btn>
+        </v-snackbar>
     </v-container>
 </template>
 <script src="./setNewPassword.ts"></script>
