--- a/src/RecruitMe.Web/ClientApp/components/navmenu/navmenu.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/navmenu/navmenu.vue.html
@@ -62,7 +62,7 @@
                     Zalogowany jako Admin
                 </v-alert>
             </v-toolbar-items>
-            <v-menu offset-y="true">
+            <v-menu :offset-y="true">
                 <template v-slot:activator="{ on }">
                     <v-btn color="primary" dark v-on="on">
                         Menu <v-icon>menu</v-icon>
