--- a/src/RecruitMe.Web/ClientApp/components/account/login/login.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/account/login/login.vue.html
@@ -8,14 +8,19 @@
             <v-btn to="/account/remindLogin">Przypomnij login</v-btn>
             <v-text-field label="Hasło" v-model="password" name="password" type="password" :rules="notEmptyRule"></v-text-field>
             <v-btn class="mb-2" to="/account/resetpassword">Zresetuj hasło</v-btn>
-            <v-alert type="error" v-show="failed">Logowanie się nie powiodło, spróbuj jeszcze raz lub skontaktuj się z administratorem.</v-alert>
         </v-card-text>
 
         <v-card-actions>
             <div class="form-group">
                 <v-btn :disabled="fetching" @click="handleSubmit">Zaloguj</v-btn>
-                <img v-show="fetching" />
             </div>
         </v-card-actions>
+
+        <v-snackbar v-model="snackbar">
+            {{ errorMessage }}
+            <v-btn color="pink" text @click="snackbar = false">
+                Zamknij
+            </v-btn>
+        </v-snackbar>
     </card-layout>
 </template>
