--- a/src/RecruitMe.Web/ClientApp/components/recruitment/profile/profile.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/recruitment/profile/profile.vue.html
@@ -1,7 +1,10 @@
 ﻿<template>
     <div class="mt-2">
         <h2>Profil</h2>
-        <div class="row">
+        <!--I asume here email is the marker if profile is loaded-->
+        <spinner v-if="!profile.email"></spinner>
+
+        <div class="row" v-if="profile.email">
             <div class="col-sm-6">
                 <v-card class="mb-3">
                     <v-card-subtitle>
