Fixing front end compilation

--- a/src/RecruitMe.Web/ClientApp/components/recruitment/yourexams/yourExams.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/recruitment/yourexams/yourExams.vue.html
@@ -29,7 +29,7 @@
                 Examiny
             </v-card-title>
             <v-card-text>
-                <v-card v-for="exam in examsFormatted" class="mb-3">
+                <v-card v-for="exam in examsFormatted" :key="exam.key" class="mb-3">
                     <v-card-text>
                         <v-card-title>
                             {{exam.categoryName}}
