--- a/src/RecruitMe.Web/ClientApp/components/app/app.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/app/app.vue.html
@@ -1,7 +1,8 @@
 <template>
     <div id='app-root' class="container-fluid">
         <v-app>
-            <menu-component @user-logged-in="setCurretUser" :userLoggedIn="userLoggedIn" :displayName="displayName"/>
+            <menu-component @user-logged-in="setCurretUser"
+              :userLoggedIn="userLoggedIn" :displayName="displayName" :messages="messages"/>
             <router-view @user-logged-in="setCurretUser"></router-view>
         </v-app>
     </div>
