--- a/src/RecruitMe.Web/ClientApp/components/chat/chatWith.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/chat/chatWith.vue.html
@@ -13,16 +13,26 @@
             <v-toolbar-title>Chat</v-toolbar-title>
         </v-toolbar>
         <v-card-text>
-            <v-list class="overflow-y-auto">
+            <v-list ref="mainList" shaped class="messagesList">
                 <template v-for="message in messages">
-                    
+                    <v-list-item two-line riple="0">
+                        <v-spacer v-if="message.isMine"></v-spacer>
+                        <v-list-item-content class="m5">
+                            <v-card shaped :class="{'mineCard': message.isMine}">
+                                <v-card-text>{{message.message}}</v-card-text>
+                            </v-card>
+                            <v-list-item-subtitle :class="{'subMargin': true, 'mineSubtitle': message.isMine}">
+                                {{getDateText(message.timestamp)}}
+                            </v-list-item-subtitle>
+                        </v-list-item-content>
+                    </v-list-item>
                 </template>
             </v-list>
         </v-card-text>
         <v-card-actions>
             <v-row>
-                <v-text-field v-model="msg" label="Wiadomość" single-line outlined class="textField">
-                </v-text-field>
+                <v-text-field v-model="msg" label="Wiadomość" outlined
+                full-width clearable counter maxlength="500" class="textField"></v-text-field>
                 <v-btn fab dark small color="primary" type="submit" class="sendBtn" @click="sendMessage">
                     <v-icon dark>send</v-icon>
                 </v-btn>
@@ -32,9 +42,30 @@
 </template>
 <script src="./chatWith.ts"></script>
 <style scoped>
+    .m5 {
+        padding-left: 5px;
+        padding-right: 5px;
+        max-width: 40vw;
+        display: inline-table;
+    }
+    .mineCard {
+        background-color: #b3d4fc!important;
+        color: white!important;
+    }
+    .mineSubtitle {
+        text-align: right;
+    }
+    .messagesList {
+        height: 50vh;
+        max-height: 50vh;
+        overflow-y: auto;
+    }
     .sendBtn {
         margin-top: 8px;
         margin-left: 10px;
+    }
+    .subMargin {
+        margin-top: 2px;
     }
     .textField {
         margin-left: 8px!important;
