Add link to chat in candidate details page

--- a/src/RecruitMe.Web/ClientApp/components/adminpanel/details/candidateDetails.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/adminpanel/details/candidateDetails.vue.html
@@ -72,7 +72,7 @@
                                 <v-btn @click="handleDelete">Usuń Użytkownika</v-btn>
                             </v-col>
                             <v-col>
-                                <v-btn>Otwórz chat(TODO)</v-btn>
+                                <v-btn :to="'/chatwith/'+candidateId">Otwórz chat</v-btn>
                             </v-col>
                         </v-row>
                     </v-card-actions>
